--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'French language -- Dialects -- Switzerland'
 - !lcc 'PC'
 - !lcsh 'French language -- Dialects -- Dictionaries'
+- GITenberg
 title: Nouveau Glossaire Genevois, tome 2/2
 url: http://www.gutenberg.org/ebooks/42088
